# langlisten-next

./: .env.sample  .gitignore  README.md  docker-compose.backend.yml  docker-compose.frontend.yml  docker-compose.middlewave.yml  docker-compose.prod.yml  package-lock.json
backend/: Dockerfile  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 76c14d6ce25c_init.py  7f8fc4f133da_init.py
backend/app/: main.py  worker.py
backend/app/api/: router.py
backend/app/api/admin/: materials.py  subtitles.py  tasks.py
backend/app/core/: config.py  database.py  redis.py
backend/app/models/: __init__.py  material.py  practice.py  subtitle.py
backend/app/schemas/: material.py  subtitle.py
backend/app/services/: ffmpeg_service.py
backend/app/services/whisper/: splitter.py  transcriber.py
backend/app/storage/: base.py  factory.py  local.py  minio.py
backend/app/tasks/: transcribe.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(admin)/: layout.tsx
frontend/src/components/admin/: SubtitleList.tsx  TranscribeProgress.tsx  WaveformEditor.tsx
frontend/src/components/web/: AudioPlayer.tsx  DiffResult.tsx  InputBox.tsx
frontend/src/types/: index.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/audio/: decoder.rs  mod.rs  player.rs  resampler.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/metadata/: reader.rs
src/components/: Cassette.tsx  Icon.tsx
src/lib/: api.ts  utils.ts
src/styles/: global.css
(+12 files in other folders)
