[package]
name = "MusicOwl"
version = "0.1.0"
description = "A retro MusicOwl with emotion-driven visuals"
authors = ["techfs"]
edition = "2021"

[lib]
name = "music_owl_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "MusicOwl"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
base64 = { version = "0.22", features = ["std"] }
anyhow = "1"
log = "0.4"
env_logger = "0.11"
crossbeam-channel = "0.5"
parking_lot = "0.12"
cpal = "0.17.3"
lofty = "0.24.0"
symphonia = "0.5.5"
realfft = "3.4"
rustfft = "6.2"
encoding_rs = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
